	  and Makefile:  Add host-side test driver (2014-11-21).

7.7 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/romfs/Makefile: fix romfs example builtin app registry
	  issue.  From Librae (2014-11-27).
	* apps/examples/djoystick and support files:  Add a test of the discrete
	  joystick driver (2014-11-28).
	* apps/examples/ajoystick and support files:  Add a test of the analog
	  joystick driver (2014-12-03).
	* apps/nshlib/nsh_netcmds.c: NSH TFTP get command:  Wrong file namei
	  used for the destination.  From Lazlo (2014-12-10).
	* apps/system/cu: Add a minimalist implementation  of the 'cu' terminal
	  program (part of Taylor UUCP for ages). Using it, you can simply open
	  a serial port and interact with it. Using '~.' you can leave the
	  terminal program and drop back to nsh.  This  might come in handy for
	  people that have e.g. GSM modems, GPS receivers or other devices with
	  text based serial communications attached to their Nuttx systems. From
	  Harald Welte (2014-12-13).
	* apps/examples/ltdc and build-related file: Add ltdc test example. From
	  Marco Krahl (2014-12-19).
	* apps/system/cdcacm, composite and usbmsc:  Fix some strangely placed
	  conditional compilation.  Looks like an automated update gone awry
	  (2014-12-28).
	* apps/examples/ltdc/ltdc_main.c:  Clean up documentation, some formatting
	  improvements.  From Marco Krahl (2014-12-29).
	* apps/system/lm75 and build-related files:  Add a tiny application to
	  read the temperature from an LM-75 (or compatible) temperature sensor
	  (2015-01-06).
	* apps/interpreters/micropython:  A port of Micro Python to NuttX.
	  Contributed by Dave Marples (2015-01-11).
	* apps/examples/timer:  Add a trivial test of the timer driver
	  (2015-01-13).
	* apps/netutils/dnsclient:  Can select to be either IPv4 or IPv6, but
	  not both (IPv6 still does not compile) (2015-01-18).
	* apps/netutils/netlib:  Add new library functions to manipulate IPv6
	  addresses (2015-01-13).
