@@ -1175,4 +1175,6 @@
 	  not both (IPv6 still does not compile) (2015-01-18).
 	* apps/netutils/netlib:  Add new library functions to manipulate IPv6
 	  addresses (2015-01-13).
+	* apps/nshlib/Kconfig and nsh_netinit.c:  Add logic to initialize
+	  IPv6 addresses (2015-01-19).
 
